ci/jenkins/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
spec:
  ingressClassName: nginx
  rules:
    - host: YOUR-HOST-NAME-GOES-HERE
      http:
        paths:
          - backend:
              service:
                name: jenkins
                port:
                  number: 8080
            path: /
            pathType: Prefix
  # This section is only required if TLS is to be enabled for the Ingress
  # tls:
  #   - hosts:
  #     - YOUR-HOST-NAME-GOES-HERE
  #     secretName: jenkins-tls
